# Miscellaneous

AlphaFable-2.0/: README.md
AlphaFable-2.0/sql/: BLANK.md
AlphaFable-2.0/www/: index.php
AlphaFable-2.0/www/framework/: framework.php  fw.database.php  fw.game.php  fw.ninja.php  fw.security.php  fw.xml.php
AlphaFable-2.0/www/game/: cf-usersignup.php  global.php
AlphaFable-2.0/www/install/: install.php
Anne-Takamaki-Bot/: README.md  bot.py
Anne-Takamaki-Bot/commands/: __init__.py  bot_configuration.py  bot_functions.py  bot_message.py
Anne-Takamaki-Bot/commands/scripts/: __init__.py  sankakucomplex.py
Arbitrary-Backend/: CMakeLists.txt  config.h.in
Arbitrary-Backend/include/: simd.h  types.h
Arbitrary-Backend/include/random/: random.h  spinlock.h
Arbitrary-Backend/source/: test.c
Base32/: CMakeLists.txt  main.c
Base32/include/: base32.h  strfunc.h
Base32/src/: base32.c  strfunc.c
Base32/test/: README.md  base32.bat  base32.txt
Book-Templates/: README.md
Book-Templates/Guidebook/: README.md  main.tex
Book-Templates/Guidebook/Bibliography/: README.md
Book-Templates/Guidebook/Chapters/: Chapter_01.tex  Chapter_02.tex  Chapter_03.tex  Chapter_04.tex  Chapter_05.tex  Chapter_06.tex  Chapter_07.tex  Chapter_08.tex  Chapter_09.tex  Chapter_10.tex
Book-Templates/Guidebook/Images/: README.md
Discord-Scraper-Experiment/: CMakeLists.txt  README.md  main.c
Discord-Scraper-Experiment/include/: compiler.h  mytypes.h  xsocket.h
Discord-Scraper-Experiment/source/: xsocket.c
FR33THY-Linux-Guide/: README.md  main.tex
FR33THY-Linux-Guide/Chapter_01/: Section_01.tex  Section_02.tex  Section_03.tex  Section_04.tex
FR33THY-Linux-Guide/Chapters/: Chapter_01.tex  Chapter_02.tex  Chapter_03.tex  Chapter_04.tex  Chapter_05.tex  Chapter_06.tex  Chapter_07.tex
GMP-PCG/: CMakeLists.txt  LICENSE  README.md  entry.cc
GMP-PCG/inc/: gmppcg.hh
JPatcher/: README.md
JPatcher/handler/: Checksum.java  Compressor.java  Diff.java  Main.java
JPatcher/merger/: Merge.java
JPatcher/patcher/: Patch.java
MUSE/: .gitignore  README.md  build.sh
MUSE/Sources/: muse.c  muse.h
Nginx-Configs/: README.md
Nginx-Configs/Security-Oriented/: README.md  nginx.conf  optimized.conf  secure.conf
NonHTTP-API/: CMakeLists.txt  README.md  main.c  test.json
NonHTTP-API/inc/: global.h
NonHTTP-API/inc/cfg/: json.c  json.h
Omniscrape/: .htaccess  README.md  changelog.php  downloads.php  index.php
Omniscrape/cfg/: config.php
Omniscrape/css/: w3.css
ProxGFY/: README.md  proxgfy.php
ProxGFY/proxgfy/: 16276.asn  18978.asn  35017.asn  51852.asn  54500.asn  9009.asn  torlist.list
Reddit-Scraper/: README.md  reddit.py
Simple-Password-Generator/: CMakeLists.txt  README.md  main.c  pcg.h
SimpleRequests/: README.md  test.py
SimpleRequests/SimpleRequests/: SimpleRequestsPy2.py  SimpleRequestsPy3.py
SomeGoSite/: .gitignore  README.md  index.go
TOTP-CPP/: CMakeLists.txt  LICENSE  README.md
TOTP-CPP/include/: base32.h  pcg.h  token.h
TOTP-CPP/include/pcg/: pcg_random.hpp  pcg_uint128.hpp
TOTP-CPP/source/: entry.cc
TileMapper/: .gitignore  README.md  TileMapper.sln
TileMapper/TileMapper/: Entry.cc  Resource.aps  Resource.rc  TileMapper.vcxproj  TileMapper.vcxproj.filters  Window.h
Tribute/: .gitattributes  CMakeLists.txt  LICENSE  README.md  default.nix  main.c
Tribute/src/: color.c  color.h  pcg.h
UBHue/: README.md  ubhue.php
UBHue/ubhue/: ubhue_style.php  ubhue_submitform.php
Unnamed-Project/: CMakeLists.txt  README.md  main.c
Unnamed-Project/irc_base/: enum_perms.h  irc_array.h  irc_base.h  irc_command.h  irc_string.h
XSocket-Port-Checker/: CMakeLists.txt  README.md
XSocket-Port-Checker/source/: entry.c  xsocket.c  xsocket.h
php-base32/: README.md  base32.h  config.m4  php_base32.c  php_base32.h
php_totp/: README.md  config.m4  php_totp.h  totp.c
php_totp/include/: base32.c  base32.h  base64.c  base64.h  global.h  pcg.c  pcg.h  qrcode.h  qrcode_gd.c  qrcode_gd.h
